# ai_agent

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
certificates/: decrypt_trust.pem
data/: README.txt
docs/: .$Architettura.drawio.bkp
docs/img/: MyWorkFlow.html
src/: __main__.py  base.py
src/llama_index_experiments/: arxiv_search_agent.py  hf_simple_workflow.py  hf_workflow.py  llm_load.py  my_workflow.py  simple_agent.py  simple_workflow.py  web_search_agent.py  yahoo_search_agent.py
src/utils/: bing_search_loader.py  custom_dataclass.py  env_var_loader.py  gm_data_loader.py  llm_loader.py  prompts.py  token_counter_and_price.py  web_contents_validator.py
tests/: conftest.py  test_base.py
