[tool.poetry]
name = "ai_agent"
version = "0.1.0"
description = "Building an AI agent with LlamaIndex"
authors = ["Andrea Giansanti <andreagiansanti90@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.9.22"
pre-commit = "^3.6.0"
sphinx-rtd-theme = "^2.0.0"
llama-index = "^0.12.33"
llama-index-llms-gemini = "^0.4.14"
python-dotenv = "^1.1.0"
llama-index-llms-google-genai = "^0.1.7"
pipx = "^1.7.1"
pycln = "^2.5.0"
llama-index-tools-arxiv = "^0.3.0"
llama-index-tools-yahoo-finance = "^0.3.0"
llama-index-tools-wikipedia = "^0.3.0"
llama-index-utils-workflow = "^0.3.1"
arize-phoenix-otel = "^0.9.2"
openinference-instrumentation-llama-index = "^4.2.1"
duckduckgo-search = "^8.0.1"

[tool.poetry.group.logs.dependencies]
logging = "^0.4.9.6"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
docstr-coverage = "^2.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.format.dependencies]
docformatter = "^1.7.5"

[tool.poetry.group.code_analyzer.dependencies]
pylint = "^3.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"

[tool.ruff]
line-length = 88
target-version = "py39"
lint.select = ["E", "F", "UP", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
